function factory explration

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
       <section>
        
       </section>
-    <script src="script.js"></script>
-    
-  </body>
+        <script src="http-factory.js"></script>
+        <script src="script.js"></script>
+   </body>
 </html>
